--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch"
+    "start": "npm-run-all --parallel build live-server",
+    "build": "webpack --watch",
+    "live-server": "live-server"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/sabinaander/react-playground#readme",
   "dependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "live-server": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "source-map-loader": "^3.0.1",
@@ -29,6 +31,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@webpack-cli/generators": "^2.4.2",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.6",
     "webpack-cli": "^4.9.2"
   }
